# CV-Agent-Pipeline

./: .env.example  .gitignore  PDR.md  README.md  USAGE.md  pyproject.toml  start-web.bat
.qwen/: settings.json
config/: agents.yaml  config.yaml  providers.yaml  thresholds.yaml
src/: __init__.py  main.py
src/agents/: __init__.py  ats_scorer_agent.py  base_agent.py  cv_parser_agent.py  cv_writer_agent.py  job_fit_scorer_agent.py  refiner_agent.py  renderer_agent.py  scraper_agent.py
src/models/: __init__.py  cv.py  job.py  scores.py
src/pipeline/: __init__.py  orchestrator.py  workflow.py
src/providers/: __init__.py  anthropic_provider.py  base_provider.py  groq_provider.py  mistral_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py  provider_manager.py
src/rendering/: __init__.py
src/rendering/templates/: cv_template.html
src/rendering/templates/styles/: cv_styles.css
src/storage/: __init__.py  chroma_store.py  schemas.py
src/utils/: __init__.py  config_loader.py  logger.py  validators.py
src/web/: __init__.py  api.py  index.html
templates/: example_experience.yaml  test_experience.yaml  user_experience.yaml
tests/: __init__.py  run_mock_test.py  run_ollama_test.py  test_config.py  test_models.py  test_validators.py
