[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-agent-pipeline"
version = "0.1.0"
description = "A multi-agent AI system for automated, tailored CV generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CV Agent Team"}
]
keywords = [
    "cv",
    "resume",
    "llm",
    "agents",
    "langchain",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.22",
    "weasyprint>=60.0",
    "jinja2>=3.1.3",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Scraping
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "readability-lxml>=0.8.1",
    # Utils
    "loguru>=0.7.2",
    "typer>=0.9.0",
]

[project.optional-dependencies]
providers = [
    "openai>=1.10.0",
    "anthropic>=0.8.0",
    "groq>=0.4.0",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]
parsing = [
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "ruff>=0.1.13",
    "black>=24.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
cv-agent = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
